# py-erp

./: .dockerignore  .env.example  .env.prod.example  .gitignore  .pre-commit-config.yaml  @New Notepad  CODE_OF_CONDUCT.md  New Notepad  README.md  README_image_integration.md  VERSION.md  analyze_snapshot.py  artikel_variante_preise_sample.json  build_log.txt  check_1p_connection.py  check_articles.py  check_inventory.py  check_legacy_boxes.py  check_storage_locations.py  clean_index.py  codecov.yml  commands.json  conftest.py  create_simple_cert.ps1  create_ssl_certs.ps1  create_sync_mapping.py  create_variant_product_mapping.py  custom_migration.py  debug_api.py  debug_docker.prod.sh  debug_fetch.py  direct_prod_sync.py  direct_sync.py  docker-compose.prod.yml  dump.rdb  fix_customer_sync.py  fix_customers_sync.py  fix_db.py  fix_inventory_relationships.py  fix_is_placeholder.py  (+60 more)
.ai/: dependency_management_implementation.md  legacy_sync_design.md  prd.md  user_stories.md  user_stories_dependency_management.md  websocket_architecture.md  websocket_implementation_plan.md  websocket_stories.md
.ai/implementation_plan/: data_sync_framework.md  parent_product_import.md
.ai/implementation_reports/: vue_phase1_implementation.md
.ai/reports/: admin_status_dashboard_implementation.md  direct_api_testing_progress.md
.ai/stories/: PYERP-VUE-001.md  PYERP-VUE-002.md  PYERP-VUE-003.md  PYERP-VUE-004.md  PYERP-VUE-005.md  admin_status_dashboard.md  external_api_access.md  legacy_api_integration.md  legacy_api_integration_narrative.md  legacy_api_server_unavailability.md  legacy_api_server_unavailability_implementation.md  legacy_api_session_management.md  product_import_artikel_variante.md  test_coverage_improvement.md  testing_implementation.md  vue_integration_progress.md  vue_migration_summary.md
.ai/user_stories/: data_sync_framework.md  (+2 more)
.cursor/: .cursorrules
.examples/: .env.dev.example  .env.example  .env.prod.example  .env.production.example
.github/: README.md  dependabot.yml
admin_tools/: __init__.py  apps.py  urls.py  views.py
business/: apps.py
config/: commands.json
config/project/: .pre-commit-config.yaml  pyerp.conf  pyproject.toml
docker/: DATADOG_SETUP.md  Dockerfile.dev  Dockerfile.dev-debug  Dockerfile.dev-direct  Dockerfile.dev-linux  Dockerfile.elastic-kibana  Dockerfile.minimal  Dockerfile.prod  Dockerfile.zebra_day  README.md  apt-install.sh  datadog.yaml  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  docker.env  docker.env.dev  docker.env.dev.example  docker.env.example  docker.env.prod  docker.env.prod.example  docker.local.env  docker.local.env.example  elastic-kibana-entrypoint.sh  ensure_frontend_deps.sh  ensure_static_dirs.sh  entrypoint.dev.sh  entrypoint.prod.sh  entrypoint.sh  filebeat_config.yml  install_monitoring.sh  kibana_setup.py  start.sh  supervisord.conf  supervisord.dev.conf  supervisord.prod.conf  test-build.sh  test-pdf-deps.dockerfile  vue-entrypoint.sh  (+1 more)
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  ENV_CONSOLIDATION.md  TEAM_ANNOUNCEMENT.md  VERSION.md  dependency_management.md  dependency_updates.md  django_5_1_upgrade.md  environment_configuration.md  frameworks_and_plugins.md  frontend_auth_troubleshooting.md  index.md  missing_variants_analysis.md  monitoring.md  mutation_testing.md  product_model_split.md  project_structure.md  property-based-testing.md  property_based_testing.md  react_auth_implementation.md  react_testing_fixes.md  react_testing_improvement_plan.md  sync_tests_migration.md  test_coverage_improvement_plan.md  test_coverage_report.md  testing.md  testing_summary.md  users_roles_permissions.md  validation_framework.md  vue_auth_implementation.md
frontend/: .eslintrc.cjs  .gitignore  .prettierrc  ARCHITECTURE.md  README.md  custom-build.sh  index.html  package-lock.json  package.json  pinegrow.json  tsconfig.json  vite.config.ts
frontend-react/: .babelrc  .eslintrc.js  .eslintrc.json  README.md  babel.config.js  dashboard.tsx  dotenv.setup.js  jest-junit.xml  jest.config.js  jest.setup.js  jest.setup.tsx  junit.xml  middleware.ts  next.config.js  package-lock.json  package.json  stryker.conf.js  tailwind.config.js  tsconfig.jest.json  tsconfig.json
pyerp/: __init__.py  api_urls.py  asgi.py  celery.py  development_db.sqlite3  urls.py  version.py  version_urls.py  wsgi.py
requirements/: base.in  base.txt  development.in  minimal.in  production.in  production.in.testing  requirements.dev.in  requirements.dev.txt  requirements.prod.in  requirements.prod.txt  requirements.txt
scripts/: HTTPS_SETUP_GUIDE.md  README.md  __init__.py  add_pytest_markers.py  analyse_artikel_stamm.py  analyze_artikel_familie_correct.py  build_direct.ps1  build_direct.sh  check_db_structure.py  check_dependencies.py  check_docker_deps.py  check_product_image.py  check_produktfotos.py  check_relationships.py  check_variant_parent_relationships.py  clear_product_tables.py  clear_products.py  compile_translations.py  configure_elasticsearch_retention.sh  copy_static_assets.js  create_elasticsearch_pipeline.sh  create_placeholder_parents.py  create_variant_product_mapping.py  db_validation.py  debug_docker_build.ps1  debug_docker_build.sh  deploy-staging.sh  docker-prune.sh  docker_https_troubleshooting.md  docker_rebuild.bat  docker_rebuild.ps1  docker_rebuild.sh  docker_rebuild_with_nginx.ps1  docker_rebuild_with_nginx.sh  enable_https.ps1  ensure_static_dirs.sh  fetch_artikel_variante_preise.py  fix_elasticsearch_logging.sh  fix_linting.py  fix_logging_sync.sh  (+30 more)
sync_manager/: apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
tests/: README.md  __init__.py  conftest.py  pytest.ini  run_specific_tests.py  run_tests.py  run_working_tests.py  settings.py  test_settings.py  test_urls.py
users/: __init__.py  admin.py  apps.py  middleware.py  models.py  serializers.py  services.py  signals.py  tests.py  urls.py  views.py
venv311/: pyvenv.cfg
venv38/: pyvenv.cfg
wsz_api/: __init__.py  api.py  auth.py  getRecord.py  getTable.py  pushField.py
(+1552 files in other folders)
